--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "postinstall": "cd game && npm install"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
