--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "postinstall": "cd game && npm install"
+    "postinstall": "cd game && npm install",
+    "build": "cd game && npm build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
